DEJANDO UNICAMENTE LOS PROYECTOS QUE SI ESTAN

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a class="btnfos btnfos-5" href="/html/index1.html">Mas diseños</a>
+    <!--<a class="btnfos btnfos-5" href="/html/index1.html">Mas diseños</a>-->
     <video autoplay muted loop id="background-video">
         <source src="Images/nebula_blue_-_49252 (Original).mp4" type="video/mp4">
         Tu navegador no soporta la reproducción de videos.
@@ -19,12 +19,19 @@
     <div class="slider">
         <span style="--i:1"><a href="https://phenomenal-otter-79b424.netlify.app/" target="_blank"><img src="Images/img1.jpg" alt=""></a></span>
         <span style="--i:2"><a href="https://stellular-travesseiro-6f5621.netlify.app/" target="_blank"><img src="Images/img2.jpg" alt=""></a></span>
-        <span style="--i:3"><a href="enlace3.html" target="_blank"><img src="Images/img3.png" alt=""></a></span>
+        <span style="--i:3"><a href="https://phenomenal-otter-79b424.netlify.app/" target="_blank"><img src="Images/img1.jpg" alt=""></a></span>
+        <span style="--i:4"><a href="https://stellular-travesseiro-6f5621.netlify.app/" target="_blank"><img src="Images/img2.jpg" alt=""></a></span>
+        <span style="--i:5"><a href="https://phenomenal-otter-79b424.netlify.app/" target="_blank"><img src="Images/img1.jpg" alt=""></a></span>
+        <span style="--i:6"><a href="https://stellular-travesseiro-6f5621.netlify.app/" target="_blank"><img src="Images/img2.jpg" alt=""></a></span>
+        <span style="--i:7"><a href="https://phenomenal-otter-79b424.netlify.app/" target="_blank"><img src="Images/img1.jpg" alt=""></a></span>
+        <span style="--i:8"><a href="https://stellular-travesseiro-6f5621.netlify.app/" target="_blank"><img src="Images/img2.jpg" alt=""></a></span>
+        <!--<span style="--i:3"><a href="enlace3.html" target="_blank"><img src="Images/img3.png" alt=""></a></span>
         <span style="--i:4"><a href="enlace4.html" target="_blank"><img src="Images/img4.jpg" alt=""></a></span>
         <span style="--i:5"><a href="enlace5.html" target="_blank"><img src="Images/img5.png" alt=""></a></span>
         <span style="--i:6"><a href="enlace6.html" target="_blank"><img src="Images/img6.jpg" alt=""></a></span>
         <span style="--i:7"><a href="enlace7.html" target="_blank"><img src="Images/img7.jpg" alt=""></a></span>
         <span style="--i:8"><a href="enlace8.html" target="_blank"><img src="Images/img8.jpg" alt=""></a></span>
+        -->
     </div>
 </body>
 
